refactor: improve case bc implementation.